# VidjetsBank_Skypro

./: README.md  main.py  pyproject.toml
report/: index.html
src/: reports.py  services.py  utils.py  views.py
src/tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
tests/: test_reports.py  test_services.py  test_views.py
